--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* -------------------------------------------- */
 /* HTML Body Start */
 
@@ -54,7 +53,7 @@ p {
 }
 
 .header,
-.navbar .navbar-nav,
+.header__navbar .header__navbar-nav,
 .header .btn-group,
 .header .btn-group .btn {
   display: flex;
@@ -79,14 +78,15 @@ p {
   box-shadow: 0 0.75rem 0.75rem #12121220, inset 0 -0.75rem 0.75rem #fffffe20;
   background: rgba(255, 255, 255, 0.3);
 }
+
 /* -------------------------------------------- */
 
-.header .navbar-brand {
+.header .header__navbar-brand {
   /* padding: 0.75rem 0; */
 }
 
 /* -------------------------------------------- */
-.navbar .nav-item {
+.header__navbar .header__nav-item {
   cursor: pointer;
   padding: 0.75rem;
   margin: 0 0 0.75rem;
@@ -96,12 +96,12 @@ p {
   */
 }
 
-.navbar .dropdown .content {
+.header__navbar .dropdown .content {
   display: none;
   position: relative;
 }
 
-.navbar .dropdown:hover .content {
+.header__navbar .dropdown:hover .content {
   display: block;
   position: absolute;
   top: 100%;
@@ -113,7 +113,7 @@ p {
   box-shadow: 0 0.75rem 0.75rem #12121220, inset 0 -0.75rem 0.75rem #12121220;
 }
 
-.navbar .nav-item:hover {
+.header__navbar .header__nav-item:hover {
   background-color: #fffffe20;
   --blur: blur(1rem) saturate(180%);
   /* --border: 1px solid #fffffe20;
@@ -124,6 +124,7 @@ p {
   backdrop-filter: var(--blur);
   -webkit-backdrop-filter: var(--blur);
 }
+
 /* -------------------------------------------- */
 .header .btn-group {
   gap: 10px;
@@ -181,7 +182,7 @@ p {
 }
 
 @media only screen and (max-width: 857px) {
-  .header .navbar {
+  .header .header__navbar {
     display: none;
   }
 }
@@ -226,7 +227,7 @@ p {
   0% {
     transform: rotateX(90deg);
   }
-  
+
   100% {
     /*  transform:translateY(0); */
   }
@@ -267,13 +268,13 @@ p {
 /* -------------------------------------------- */
 /* Card-group Start */
 /*
-.card:has(.figure, .card-body, .heading-content, .btn-group) {
+.card:has(.figure, .card__body, .heading-content, .btn-group) {
   display: flex;
 }
 .card,
 .card .figure,
-.card .card-body,
-.card .card-body .heading-content,
+.card .card__body,
+.card .card__body .heading-content,
 .card .btn-group {
   display: flex;
 }
@@ -308,11 +309,13 @@ p {
 .card:hover {
   filter: saturate(3);
   /* filter: contrast(1.2) saturate(1.5) hue-rotate(45deg); */
-  
+
   background-size: 500%;
   /*  box-shadow: inset 0 7px 10px black; */
 }
+
 /* -------------------------------------------- */
+
 .card .figure {
   display: flex;
   justify-content: center;
@@ -328,34 +331,37 @@ p {
 .card:hover .card-img-top {
   transform: translateY(10px) translateZ(2rem);
 }
+
 /* -------------------------------------------- */
-.card .card-body {
+
+.card__body {
   gap: 0.75rem;
   display: flex;
   flex-direction: column;
 }
 
-.card .card-body .heading-content {
+.card__body .heading-content {
   align-items: center;
   display: flex;
   justify-content: space-between;
 }
 
-.card .card-body .card-title {
+.card__title {
   font-size: 1.5rem;
   text-transform: capitalize;
 }
 
-.card .card-body .card-text {
+.card__text {
   font-size: 0.75rem;
-  color: #2c2v2v;
+  /* color: #2c2v2v; */
 }
 
-.card .card-body .card-text::first-letter {
+.card__text::first-letter {
   text-transform: capitalize;
 }
+
 /* -------------------------------------------- */
-.card .card-body .btn-group {
+.card .card__body .btn-group {
   gap: 0.75rem;
   display: flex;
   flex-direction: column;
@@ -416,7 +422,7 @@ p {
   text-transform: capitalize;
 }
 
-.footer .row {
+.footer__row {
   padding: 1rem;
   display: grid;
   gap: 0.75rem;
@@ -427,29 +433,30 @@ p {
   box-shadow: var(--shadow);
 }
 
-.footer .row .footer-menu {
+.footer__menu {
   font-size: 0.75rem;
   margin-left: 0.75rem;
 }
 
-.footer .row .footer-menu .footer-title {
+.footer__title {
   color: #e8b44f;
   font-size: 1.125rem;
   font-family: "Bree Serif";
 }
 
-.footer .footer-menu .footer-item {
+.footer__item {
   /* margin: 0.75rem 0; */
   color: #fffffe;
   cursor: text;
 }
 
-.footer .footer-item .footer-link:hover {
+.footer__link:hover {
   text-decoration: underline;
 }
+
 /* -------------------------------------------- */
 
-.footer-row {
+.footer__second-row {
   display: flex;
   color: #fffffe;
   flex-wrap: wrap-reverse;
@@ -465,26 +472,26 @@ p {
   background: rgba(0, 0, 0, 0.7);
 }
 
-.footer-row .copyright {
+.footer__second-row .copyright {
   color: #fffffe;
   text-align: center;
   margin: 0.75rem auto;
   flex-direction: column;
 }
 
-.footer-row .footer-menu {
+.footer__second-row .footer__menu {
   display: flex;
   margin: 0.75rem auto;
 }
 
-.footer-row .footer-menu .footer-item {
+.footer__second-row .footer__menu .footer__item {
   margin: 0 0.75rem;
   font-size: 0.875rem;
   cursor: text;
 }
 
 @media only screen and (max-width: 660px) {
-  .footer-row .copyright {
+  .footer__second-row .copyright {
     font-size: 0.75rem;
   }
 }
@@ -493,6 +500,8 @@ p {
 /* -------------------------------------------- */
 
 @media (prefers-color-scheme: dark) {
-  background-color: #121212;
-  color: #fffffe;
+  body {
+    background-color: #121212;
+    color: #fffffe;
+  }
 }
